# continual-music-source-separation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  launch_test_train.sh  launch_train.sh  lume.yml  pyproject.toml  ruff.toml  train_and_eval_script_roformer.py
analysis/: separator.py  source_separation.py
analysis/utils/: audio.py
experiments/: bs-roformer_all.yaml  demucsv2_all.yaml
experiments/bs-mel-roformer/: bs-mel-roformer_bass.yaml  bs-mel-roformer_drums.yaml  bs-mel-roformer_others.yaml  bs-mel-roformer_vocals.yaml
experiments/bs-roformer/: bs-roformer_all.yaml  bs-roformer_bass.yaml  bs-roformer_drums.yaml  bs-roformer_other.yaml  bs-roformer_vocals.yaml
experiments/demucs/: demucs_bass.yaml  demucs_drums.yaml  demucs_other.yaml  demucs_vocals.yaml
experiments/demucs_adam/: demucs_all.yaml  demucs_bass.yaml  demucs_drums.yaml  demucs_other.yaml  demucs_vocals.yaml
experiments/demucs_adam_v2/: demucs_vocals.yaml
hijos/: __init__.py
hijos/criterias/: bs_roformer_criteria.py  torch_bs_roformer_criteria.py  torch_l1_loss.py
hijos/data_transforms/: audio_to_chunks.py  demucs_transforms.py  pitch_shift.py  random_audio_chunk.py  rearrange.py  stereo_to_batch.py  tempo_stretch.py  to_torch_tensor.py
hijos/datasets/: musdb18.py
hijos/decoders/: music_source_decoder.py
hijos/evaluators/: music_source_separation_concat_evaluator.py  music_source_separation_evaluator.py
hijos/loopers/: music_source_separation_looper.py
requirements/: requirements-dev.txt  requirements.txt
src/: config.py  test.py
(+12 files in other folders)
